# warp-sys-tray

./: .gitignore  README.md
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
