[package]
name = "warp-sys-tray"
version = "0.1.0"
description = "A Tauri Sys Tray for warp-gui-app"
authors = ["AbhayJo"]
license = "MIT/Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/Abhay-N-J/warp-sys-tray"
edition = "2021"
keywords = ["cli", "GUI", "Warp", "warp-cli", "warp-gui", "sys-tray", "warp-tray"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp-gui-app = "0.1.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "warp-sys-tray"
